--- a/style.css
+++ b/style.css
@@ -2,4 +2,48 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  /* background-color: red; */
+}
+
+header {
+  text-align: center;
+}
+
+header a {
+  padding: 0 10px;
+  background-color: gold;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+figure {
+  text-align: center;
+}
+
+#featured-property p {
+  display: block;
+  margin: auto;
+  text-align: center;
+  width: 800px;
+  padding: 5px 0;
+}
+
+figcaption {
+  font-size: 0.875em;
+  font-style: italic;
+}
+
+#details {
+  padding: 20px 0;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: azure;
+  /* padding: 10px 0; */
 }
